2021-04-18	Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Improve error message for negative rule with an
	  attribute expression (closes: #90)
	* Document changed_attributes report level format (closes: #95)

2021-02-10  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Release aide 0.17.3

2021-02-07  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Fix group usage in '--after' config line

2021-02-06  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Release aide 0.17.2

2021-02-02  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Fix null pointer dereference in db_close()
	* Fix out-of-bounds read of attributes array

2021-01-30  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Require file type for --path-check (closes #88)
	* Release aide 0.17.1

2021-01-29  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Fix some typos in log messages

2021-01-27  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Fix issue where 'different attributes' message is not shown

2021-01-24  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Fix typos in aide.conf manual page

2021-01-24  rui  <rui@meetup.com>
	* Remove leftover include of 'error.h'

2021-01-23  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Release aide 0.17

2021-01-22  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Update manual pages
	* Remove outdated aide.conf.in

2021-01-21  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Update README
	* Print --help to stdout
	* Remove manual.html
	* Add missing free()
	* Limit number of nested includes

2021-01-18  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Add @@x_include_setenv macro
	* Fix segfault when using variable without value

2021-01-17  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Update copyright notices
	  - reformat copyright statements
	  - fix outdated FSF address

2021-01-16  Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Don't use autoconf input files for man pages
	* Add exit code 21 for file lock errors