@@ -100,6 +100,8 @@ Whether to warn about dead symlinks or not.
 The value of config_version is printed in the report and also printed
 to the database. This is for informational purposes only. It has no
 other functionality.
+.IP "config_check_warn_unrestricted_rules (type: bool, default: \fBfalse\fR)"
+Whether to warn on unrestricted rules during config check.
 .IP "Group definitions"
 If the parameter is not one of the previous parameters then it is
 regarded as a group definition. Value is then regarded as an
