@@ -1,4 +1,5 @@
 Version 0.18 (UNRELEASED)
+    * Add 'config_check_warn_unrestricted_rules' option
     * Improve logging
     * Update documentation
 
