@@ -1,3 +1,6 @@
+2021-04-21	Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Add 'config_check_warn_unrestricted_rules' option (closes: #44)
+
 2021-04-18	Hannes von Haugwitz  <hannes@vonhaugwitz.com>
 	* Improve error message for negative rule with an
 	  attribute expression (closes: #90)
